--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,6 @@
     box-sizing: border-box;
 }
 
-.col-md-12 {
-    margin: 30px;
-}
-
-.col-md-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-
-
-img {
-    padding: 20px;
+* {
+    font-family: 'Marvel', sans-serif;
 }
